# snake-plusplus

./: .gitignore  CMakeLists.txt  Main.cpp  README.md  install.sh  play.sh
SDL2_Standardproject/: AssetPaths.h  CMakeLists.txt  GameManager.cpp  GameManager.h  GameObject.h  Node.cpp  Node.h  Snake_new.cpp  Snake_new.h  Snake_old.cpp  Snake_old.h  Specifications.h  Vector2D.cpp  Vector2D.h
SDL2_Standardproject/SDL/: SDLBmp.cpp  SDLBmp.h  SDLError.cpp  SDLManager.cpp  SDLManager.h  SDLMusic.cpp  SDLMusic.h  SDLPng.cpp  SDLPng.h  SDLSound.cpp  SDLSound.h  SDLWindow.h
SDL2_Standardproject/Snake/: Snake.h  Snake_new.h
SDL2_Standardproject/board/: GameBoard.cpp  GameBoard.h  Node.cpp  Node.h
SDL2_Standardproject/board/grid/: Vector2D.cpp  Vector2D.h
SDL2_Standardproject/gameObjects/: GameObject.cpp  GameObject.h
SDL2_Standardproject/managers/: GameManager.cpp  GameManager.h  InputManager.h  RendererManager.h
SDL2_Standardproject/renderers/: AppleRenderer.cpp  AppleRenderer.h  BackgroundRenderer.cpp  BackgroundRenderer.h  ObstacleRenderer.cpp  ObstacleRenderer.h  Renderer.cpp  Renderer.h  SnakeRenderer.cpp  SnakeRenderer.h
SDL2_Standardproject/snake/: Snake.cpp  Snake.h  SnakeRenderer.cpp  SnakeRenderer.h  Snake_new.cpp  Snake_new.h
SnakePlusPlusTests/basic_tests/: CMakeLists.txt  GameBoard_tests.cpp  Node_tests.cpp  Point2D_tests.cpp  Snake_tests.cpp
SnakePlusPlusTests/lib/googletest/: README.md
SnakePlusPlusTests/lib/googletest/docs/: AdvancedGuide.md  FAQ.md  V1_5_AdvancedGuide.md  V1_5_FAQ.md  V1_6_AdvancedGuide.md  V1_6_FAQ.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md
cmake/: FindSDL2.cmake  FindSDL2_mixer.cmake
